[Global] Photoswipe: Fixed z-index issue

--- a/resources/css/sass/trumps/_trumps.images.scss
+++ b/resources/css/sass/trumps/_trumps.images.scss
@@ -15,3 +15,15 @@
 		@include rempx(margin-bottom, 30px);
 	}
 }
+
+
+
+
+
+/**
+ * Photoswipe
+ */
+
+.pswp {
+	z-index: 150000 !important;
+}
